stuck on bug where I turned ExerciseCard inputs into their own component and now its not working

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,6 +66,6 @@
 }
 
 body {
-	@apply bg-gray-950;
+	@apply bg-black;
 	@apply text-white;
 }
